objects/Jira_EndPoint_Setting__mdt.object
<CustomObject>
    <fields>
        <fullName>AccessToken__c</fullName>
        <label>AccessToken</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApiKey__c</fullName>
        <label>ApiKey</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Password__c</fullName>
        <label>Application Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Username__c</fullName>
        <label>Application Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClientID__c</fullName>
        <label>ClientID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClientSecret__c</fullName>
        <label>ClientSecret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Create_Issue__c</fullName>
        <label>Create Issue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delete_Issue__c</fullName>
        <label>Delete Issue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCheck__c</fullName>
        <label>HealthCheck</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Host__c</fullName>
        <label>Host</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsSandbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsSandbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Jira_Generic__c</fullName>
        <label>Jira-Generic</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Modify_Issue__c</fullName>
        <label>Modify Issue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Search_GET__c</fullName>
        <label>Search(GET)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Search_POST__c</fullName>
        <label>Search(POST)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TokenRefreshTime__c</fullName>
        <label>TokenRefreshTime</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Jira EndPoint Setting</label>
    <pluralLabel>Jira EndPoint Settings</pluralLabel>
</CustomObject>